# soundcloud-desktop

./: .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  .prettierrc.json  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.husky/: pre-commit
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download_playlist.rs  download_track.rs  get_song_image.rs  get_stream_url.rs  get_track_media_metadata.rs  get_track_waveform.rs  greet.rs  mod.rs  offline.rs  search_playlists.rs  search_results.rs  search_tracks.rs  utils.rs
src-tauri/src/commands/download/: download_playlist.rs  download_song_image.rs  download_track.rs  import_tracks.rs  mod.rs
src-tauri/src/commands/local/: delete_local_track.rs  get_local_track.rs  get_local_tracks.rs  get_song_image.rs  mod.rs  update_local_track.rs  update_local_track_metadata.rs
src-tauri/src/commands/media/: mod.rs
src-tauri/src/commands/playlist/: mod.rs
src-tauri/src/commands/search/: mod.rs  search_playlists.rs  search_results.rs  search_tracks.rs
src-tauri/src/commands/track/: get_stream_url.rs  get_track_waveform.rs  mod.rs
src-tauri/src/db/: mod.rs  setup.rs
src-tauri/src/db/migrations/: 01_init.sql
src-tauri/src/models/: app_state.rs  mod.rs  track_media_metadata.rs
src-tauri/src/utils/: artwork.rs  classify_path.rs  constants.rs  db_path.rs  export.rs  init_app_data_dir.rs  init_music_dir.rs  init_song_images_dir.rs  mod.rs
(+158 files in other folders)
