[package]
name = "soundcloud-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soundcloud-rs = "0.4.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt"] }
