[package]
name = "soundcloud-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
soundcloud-rs = "0.14.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt"] }
reqwest = { version = "0.11", features = ["json"] }
id3 = "1.16.3"
tauri-plugin-fs = "2"
url = "2.5.7"
image = "0.25.8"
base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4"] }
tauri-plugin-dialog = "2"
